# teliqos-sdk-cpp

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
include/metriqos/: metriqos.h
src/: batcher.cpp  client.cpp  event.cpp  internal.h  retry.cpp  session.cpp  storage.cpp  transport.cpp  uuid.cpp
